# doot

./: .dir-locals.el  .envrc  .gitignore  .gitmodules  .lenvs  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .related  .venv  CHANGELOG.md  LICENSE  Makefile  README.md  VERSION.toml  _changes  architecture.md  bookmark_Organiser.org  bookmark_count_verification.py  bookmark_network_analysis.py  bots.config  checklist.md  dodo.py  doot.toml  dooter.py  main.py  pylint.toml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  run_me.sh  setup.cfg  towncrier.toml  tox.toml  trie-aggregator.py  twitter_accounts.json  verifySites.py
.github/workflows/: python-publish.yml  python-test.yml
.tasks/: distribute.toml  docs.toml  doot_todos.org  triage_todos.org  version.toml
.tasks/taskcode/: refresher.py
bkmkorg/: __init__.py  __main__.py  bookmark_data.py  bookmark_simplification.py  grouper.py  html_opener.py  json_opener.py  main.py  netscape_bookmark_exporter.py  org_integrator.py  twitter_data.py  twitter_parsing.py  util.py  verifySites.py
bkmkorg/__config/: bib_compile_template.tex  bots.config  bots.toml  defaults.toml  jg_custom.bst  resolution_blacklist
bkmkorg/apis/: android.py  mastodon.py  twitter.py
bkmkorg/bibtex/: bibcleaner.py  bibcompare.py  bibtexer.py  clean.py  entry_processors.py  integrate_changes.py  load_save.py  meta_data.py  tag_filter.py  tag_split.py  utils.py  writer.py
bkmkorg/bookmarks/: bookmark_network_analysis.py  collection.py  database_fns.py  html_opener.py  integrate_update.py  netscape_bookmark_exporter.py  netscape_writer.py  plain_exporter.py  simplify_bookmarks.py  site_split.py  stat_generator.py  tag_filter.py  tag_split.py  trie-aggregator.py  trie.py
bkmkorg/bots/: bibtex_post.py  bibtex_stubber.py  image_post.py  time_announce.py
bkmkorg/collections/: base_format.py  indexfile.py  timelinefile.py  trie.py
bkmkorg/describers/: __init__.py  bibtex_compare.py  bibtex_describer.py  bibtex_file_check.py  bibtex_graphing.py  bibtex_tag_timelines.py  bookmark_missing_analysis.py  bookmark_queries.py  bookmark_tag_domain.py  bookmarks.py  pdf2text_automator.py  pdf_folder_summary.py  photo_description.py  photo_missing.py  tag_collation.py  tag_graph.py  twitter_format_checker.py  twitter_id_collation.py  word_cloud.py
bkmkorg/doot_tasks/: android.py  backup.py  basic.py  bibtex.py  bookmark.py  maintenance.py  noscript.py  orgs.py  socmedia_post.py  tags.py  twitter.py
bkmkorg/file_formats/: base_format.py  bookmarks.py  indexfile.py  netscape_bookmarks.py  tagfile.py  timelinefile.py  trie.py
bkmkorg/files/: collect.py  dfs.py  download.py  pathcmp.py
bkmkorg/filters/: bibtex_clean.py  bibtex_filter.py  bookmark_duplicate_filter.py  bookmark_filter.py  bookmark_param_filter.py  bookmark_tag_filter.py  bookmarks.py  link_cleaner.py  mass_pdf_to_text.py  org_clean.el  tag_clean.py  twitter_id_comparison.py
bkmkorg/formats/: bookmarks.py  html_writer.py  netscape_bookmarks.py  org_builder.py  tagfile.py  timelinefile.py  trie.py
bkmkorg/integrators/: backup_checker.py  bibtex.py  bookmark.py  image.py  papers.py  twitter.py  twitter_error_copier.py
bkmkorg/io/: export_netscape.py  export_org.py  export_plain.py  import_netscape.py  twitter_automator.py  twitter_error_opener.py  twitter_follow_listing.py  twitter_list_creation.py  twitter_list_upload.py  twitter_parser.py  twitter_user_listing.py
bkmkorg/mastodon/: api_setup.py  create_app.py
bkmkorg/org/: extraction.py  links.py  org2html.py  thread_split.py  thread_workers.py  verify.py
bkmkorg/papers/: imageIntegrator.py  md5PaperChecker.py
bkmkorg/splitters/: bibtex.py  bookmark_split.py  bookmark_split_b.py  bookmark_split_unique.py  bookmark_tag_split.py  file_grouper.py  imgsort.py
bkmkorg/tag/: clean.py  graph.py  tagfile.py
bkmkorg/twitter/: api_setup.py  counting.py  extraction.py  file_writing.py  lazy_component_writer.py  listing.py  mixin_passes.py  org_integrator.py  thread_obj.py  todo_list.py  tweet_retrieval.py  twitter_parsing.py  unify.py  user_ids.py
bkmkorg/utils/: bibtex.py  bookmark_splitter.py  diagram.py  duplicate_remover.py  entry_points_list.py  grouper.py  hash_check.py  missing_bookmark_finder.py  pdf.py  retrieval.py  tags.py  trie.py  tweet_todo_file.py  twitter_account_recovery.py  url_expand.py  word_cloud.py
data/: Firefox.json  Safari.html
docs/: actions.rst  api.rst  bookmark_Organiser.org  cli.rst  commands.rst  concepts.rst  conf.py  enums.rst  extension.rst  faq.rst  getting_started.rst  index.rst  install.rst  rst_tests.rst  tasks.rst  toml_ref.rst
docs/_api/: doot._abstract.rst  doot._structs.rst  doot.actions.rst  doot.cmds.rst  doot.control.rst  doot.loaders.rst  doot.mixins.rst  doot.parsers.rst  doot.reporters.rst  doot.rst  doot.task.rst  doot.utils.rst  modules.rst
docs/examples/: actions.rst  commands.rst  dootfile.rst  jobs.rst  keys.rst  overview.rst  plugins.rst  precommit.rst  tasks.rst
docs/misc/: comparison.rst  names.rst  overview.rst  state.rst
docs/modules/: doot.__init__.rst  doot.__main__.rst  doot._abstract.rst  doot._structs.rst  doot.actions.rst  doot.cmds.rst  doot.control.rst  doot.enums.rst  doot.errors.rst  doot.loaders.rst  doot.rst  doot.structs.rst  doot.task.rst
docs/reference/: actions.rst  commands.rst  enums.rst  files.rst  keys.rst  names.rst  printing.rst  reference.rst  tasks.rst  toml_ref.rst  types.rst
doit/: doit_cmd.py  doot_init.py  doot_main.py
doit/_abstract/: action.py  cmd_base.py  loader.py  reporter.py  task.py
doit/actions/: cmd_action.py  interactive.py  long_running.py  py_action.py  py_interactive.py
doit/cmds/: cmd_base.py
doit_utils/: dodo.py
doot/: __init__.py  __main__.py  _default_plugins.py  _interface.py  constants.py  doot_main.py  enums.py  errors.py  globber.py  groups.py  groups_secondary.py  index.rst  loc_data.py  overlord.py  project_init.py  structs.py  task_group.py  task_mixins.py  task_stub.py  tasker.py  todos.py  toml_access.py
tests/: bookmark_count_verification.py  context.py  initial_tests.py
(+1196 files in other folders)
