## pyproject.toml -*- mode: conf-toml -*-

[project]
name            = "doot"
version         = "0.9.1"
description     = "An opinionated, TOML based task runner"
readme          = "README.md"
requires-python = ">=3.11"
license         = {file = "LICENSE"}
keywords        = ["toml","taskrunner"]
authors         = [
  {email = "jgrey.n.plus.one@gmail.com", name  = "jgrey"}
]
classifiers     = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 3 - Alpha",
  "Topic :: Utilities",
]

dependencies   = [
    "tomlguard",
    "networkx > 3.0",
    "sh >= 2.0.6",
    "stackprinter >= 0.2.10",
    "sty",
    "boltons",
    "more_itertools",
    "decorator-validation >= 3.0.0",
    "decorator >= 5.0.0",
    "pydantic",
    "jgdv >= 0.1.3",
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
  "pytest-mock",
]
dev = [
    "pipreqs", "sphinx"
]

##-- urls
[project.urls]
homepage      = "https://github.com/jgrey4296/doot"
documentation = "https://github.com/jgrey4296/doot/wiki"
repository    = "https://github.com/jgrey4296/doot"
changelog     = "https://github.com//doot/blob/master/CHANGELOG.md"

##-- end urls

##-- scripts
[project.scripts]
doot = "doot.__main__:main"

##-- end scripts

##-- build system
[build-system]
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1"
]

build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
namespaces = true
where      = ["."]
include    = ["doot*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.exclude-package-data]

##-- end build system

# Tools #######################################################################

##-- pytest
# https://docs.pytest.org/en/8.2.x/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]
cache_dir       = ".temp/pytest_cache"
log_file        = ".temp/logs/pytest.log"

log_cli         = false
log_level       = "DEBUG"
log_cli_level   = "INFO"
log_format      = "%(levelname)s %(name)s : %(message)s"
log_file_level  = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(name)s : %(message)s"

##-- end pytest

##-- bumpver
# https://github.com/mbarkhau/bumpver
[tool.bumpver]
current_version    = "0.9.1"
version_pattern    = "MAJOR.MINOR.PATCH"
commit_message     = "[bump]: version {old_version} -> {new_version}"
tag_message        = "{new_version}"
tag_scope          = "default"
commit             = true
tag                = true
# push             = true
# pre_commit_hook  = ""
# post_commit_hook = ""

[tool.bumpver.file_patterns]
"pyproject.toml"   = [
                   '^version\s+=\s+"{version}"',
                   '^current_version\s+=\s+"{version}"'
]
"doot/__init__.py" = ['^__version__\s+:\s+Final\[str\]\s+=\s+"{version}"']
"README.md"        = ["^Version : {version}  "]

##-- end bumpver

##-- isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
color_output           = false
py_version             = 311
# profile                = "hug"
comment_prefix         = "# "
sections               = [
"FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"
]
default_section        = "THIRDPARTY"
lines_after_imports    = -1
lines_between_sections = 1
lines_between_types    = 0

import_heading_future      = "Imports:"
import_heading_stdlib      = "##-- stdlib imports"
import_heading_thirdparty  = "##-- 3rd party imports"
import_heading_firstparty  = "##-- 1st party imports"
import_heading_localfolder = ""

import_footer_future      = ""
import_footer_stdlib      = "##-- end stdlib imports"
import_footer_thirdparty  = "##-- end 3rd party imports"
import_footer_firstparty  = "##-- end 1st party imports"
import_footer_localfolder = ""

add_imports            = [
"from __future__ import annotations",
"import datetime",
"import enum",
"import functools as ftz",
"import itertools as itz",
"import logging as logmod",
"import pathlib as pl",
"from uuid import UUID, uuid1",
"from typing import (TYPE_CHECKING, Any, Callable, ClassVar, Final, Generic, Iterable, Iterator, Mapping, Match, MutableMapping, Protocol, Sequence, Tuple, TypeAlias, TypeGuard, TypeVar, cast, final, overload, runtime_checkable, Generator)",
]

##-- end isort
