[metadata]
name             = bkmkorg
version          = 0.0.1
author           = John Grey
author_email     = jgrey.n.plus.one at gmail.com
description      = A Collection of Bookmarking and Tagging Utilities
long_description = file:README.md
keywords         = bibtex, bookmark, tags
license          = ACAB
url              = https://github.com/jgrey4296/py_bookmark_organiser
classifiers =
            Programming Language :: Python :: 3.5

[options]
packages = bkmkorg
# zip_safe = False
# include_package_data = False
#

# [options.package_data]

[options.entry_points]
console_scripts =
#                 acabr = acab.modules.repl.repl_main:main
#
# describers:

# filters:

# integrators:
                  bkmk-twit-merge = bkmkorg.integrators.twitter.unify:main
# splitters:
                  bkmk-split = bkmkorg.splitters.bookmark.split:main
# Util
# pdf
# twitter
                  bkmk-twit = bkmkorg.io.twitter.automator:main
