[metadata]
name             = bkmkorg
version          = 0.0.1
author           = John Grey
author_email     = jgrey.n.plus.one at gmail.com
description      = A Collection of Bookmarking and Tagging Utilities
long_description = file:README.md
keywords         = bibtex, bookmark, tags
license          = ACAB
url              = https://github.com/jgrey4296/py_bookmark_organiser
classifiers      = Programming Language :: Python :: 3.5

[options]
packages = bkmkorg
# zip_safe = False
# include_package_data = False
#

# [options.package_data]

[options.entry_points]
console_scripts =
  bkmk                   = bkmkorg.utils.entry_points_list:main
# describers:
  bkmk-bib-cmp           = bkmkorg.describers.bibtex.compare:main
  bkmk-bib-desc          = bkmkorg.describers.bibtex.describer:main
  bkmk-bib-check         = bkmkorg.describers.bibtex.file_check:main
  bkmk-bib-graph         = bkmkorg.describers.bibtex.graphing:main
  bkmk-bib-timeline      = bkmkorg.describers.bibtex.timelines:main
  bkmk-bib-authors       = bkmkorg.describers.bibtex.author_extract:main
  bkmk-bib-index         = bkmkorg.describers.bibtex.index:main

  bkmk-pdf-summarise     = bkmkorg.describers.pdf.folder_summary:main
  bkmk-pdf-tag-summarise = bkmkorg.describers.pdf.tag_summary:main

  bkmk-tag-index         = bkmkorg.describers.tag.indexer:main
  bkmk-tag-totals        = bkmkorg.describers.tag.totals:main
  bkmk-tag-graph         = bkmkorg.describers.tag.graph:main

  bkmk-twit-index        = bkmkorg.describers.twitter.indexer:main
  bkmk-tag-grep          = bkmkorg.describers.twitter.tag_grep:main
# filters:
  bkmk-bib-clean         = bkmkorg.filters.bibtex.clean:main
  bkmk-tag-clean         = bkmkorg.filters.tag.clean:main
  bkmk-tag-graph-query   = bkmkorg.filters.tag.graph_query:main
# integrators:
  bkmk-twit-merge        = bkmkorg.integrators.twitter.unify:main
  bkmk-merge             = bkmkorg.integrators.bookmark.unify:main
  bkmk-bib-merge         = bkmkorg.integrators.bibtex.unify:main
  bkmk-backup            = bkmkorg.integrators.backup.unify:main
  bkmk-adb-backup        = bkmkorg.integrators.backup.adb_unify:main
  bkmk-noscript          = bkmkorg.integrators.noscript.merge:main
# splitters:
  bkmk-split             = bkmkorg.splitters.bookmark.split:main
  bkmk-to-txt            = bkmkorg.splitters.bookmark.bkmk_to_text:main
  bkmk-split-authors     = bkmkorg.utils.author_similarity:main

  #download
  bkmk-twit              = bkmkorg.io.twitter.automator:main

  # bots
  bkmk-bot-time          = bkmkorg.bots.time_announce:main
  bkmk-bot-bibtex        = bkmkorg.bots.bibtex_post:main
  bkmk-bot-image         = bkmkorg.bots.image_post:main
  bkmk-bot-stub          = bkmkorg.bots.bibtex_stubber:main
